fix desc title spacing

--- a/src/client/styles/App.scss
+++ b/src/client/styles/App.scss
@@ -215,7 +215,7 @@ ul {
 
   .project-description {
     margin: 0;
-    padding: 0;
+    padding-top: 1rem;
   }
 }
 
